working search and fixed large gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,15 @@
   transition:
     transform 0.3s ease,
     -webkit-transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
 }
 
 .rotate-0 {
@@ -162,6 +171,15 @@
   -webkit-transition: -webkit-transform 0.3s ease;
   transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    -webkit-transform 0.3s ease;
   transition:
     transform 0.3s ease,
     -webkit-transform 0.3s ease;
@@ -222,9 +240,9 @@
   color: #fff !important;
 }
 .card-body.published {
-  background-color: #7fffa9 !important; /* very light green */
+  background-color: #bde6ca !important; /* very light green */
 }
 
 .card-body.not-published {
-  background-color: #f1d883 !important; /* very light yellow */
+  background-color: #ebdba8 !important; /* very light yellow */
 }
